# volume_estimation

./: CMakeLists.txt  package.xml
src/: compute_volume.cc
test_data/: depth_map.npy  depth_map_predicted.npy  mask.npy
