<?xml version="1.0"?>
<package format="2">
  <name>volume_estimation</name>
  <version>0.0.0</version>
  <description> Volume calcluations. </description>

  <maintainer email="marko.panjek@gmail.com">Marko Panjek</maintainer>
  <author>Marko Panjek</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>

</package>
